<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.khokan.tutorisbdservice.StartActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/welcome_to_tutorsbd"
        android:textSize="24sp" />


    <Button
        android:id="@+id/already_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/need_account_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/already_have_an_account"
        android:textColor="#fff" />

    <Button
        android:id="@+id/need_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="115dp"
        android:background="#fff"
        android:text="@string/need_a_account"
        android:padding="10dp"/>

</RelativeLayout>
