<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.khokan.tutorisbdservice.RegistrationActivity">

    <include
        android:id="@+id/reg_abb_bar"
        layout="@layout/app_bar_layout"
        />
    <Button
        android:id="@+id/reg_create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/reg_input_field"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:textColor="#fff"
        android:text="@string/create_account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/reg_input_field"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/regi_display_name"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/display_name"
                android:inputType="text"
                android:backgroundTint="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/regi_email"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@+id/regi_display_name"
            android:layout_centerHorizontal="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/colorAccent"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/regi-password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regi_email"
            android:layout_centerHorizontal="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/reg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="75dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/create_an_account" />
</RelativeLayout>
